=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Merged: Merge changes r6048- r6063 from the trunk. (windmillway)
 - Changed: 1) Improvements to dynamic switching between Census Country/Years. 
            2) UK Finished, Still USA 1920 and less to do. 
			3) Hover tooltip enabled on edit and view Table Headers (windmillway) 
 - Changed: GEDFact_assistant/_CENS/ files to make use of new shared note formatting (windmillway)
 - a) Small additions to show one or two examples of dynamically hiding columns when changing Census Year (Not finished) 
      Choose UK and after entering one or two items, change year to 1881, The relation column is hidden.
      Works OK in IE but displacement problems in FF. Shared note does not change yet. 
 - b) Re-added the auto headers to the shared note. (windmillway)
 - Merged: Merge changes r6038- r6047 from the trunk. (windmillway)
 - Changed: More changes for Census Assistant pop up window dimensions (now 870x726) (windmillway)
 - Merged: Merge changes r6034- r6037 from the trunk. (windmillway)
 - Reduce Census Assistant pop up window dimensions (now 860x760) (windmillway)
 - Move to tableless design -kiwipgv- (windmillway)
 - Merged: Merge changes r6012 - r6033 from the trunk. (windmillway)
 - Merged: Merge changes r6007 - r6011 from the trunk. (windmillway)
 - Add missing lists from Main Menu (yalnifj)
 - Changes to try and reduce overall size of pop-up window - It is still too big really. (windmillway)
 - Added: Minor progress with CA - scrolling facility. (windmillway)
 - Merged: Merge changes r5995 - r6006 from the trunk. (windmillway)
 - Change to googlemaps (yalnifj)
 - Merged: Merge changes r5956 - r5994 from the trunk. (windmillway)